--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
   "dependencies": {
     "@docusaurus/core": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
-    "@linaria/babel-preset": "^4.3.1",
-    "@linaria/core": "^4.2.3",
-    "@linaria/react": "^4.3.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
@@ -32,24 +29,20 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@docusaurus/module-type-aliases": "2.2.0",
-    "@linaria/webpack-loader": "^4.1.9",
+    "@linaria/babel-preset": "^4.3.2",
+    "@linaria/core": "^4.2.4",
+    "@linaria/react": "^4.3.2",
+    "@linaria/webpack-loader": "^4.1.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/docusaurus": "^1.0.5",
     "babel-jest": "^29.3.1",
-    "babel-loader": "^9.1.0",
-    "css-loader": "^6.7.2",
     "eslint-plugin-jest": "^27.1.6",
-    "file-loader": "^6.2.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "mini-css-extract-plugin": "^2.7.1",
     "react-test-renderer": "^17.0.2",
-    "typescript": "^4.7.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.11.1"
+    "typescript": "^4.7.4"
   },
   "browserslist": {
     "production": [
