--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@docusaurus/module-type-aliases": "2.2.0",
+    "@linaria/babel-preset": "^4.3.2",
+    "@linaria/core": "^4.2.4",
+    "@linaria/react": "^4.3.2",
+    "@linaria/webpack-loader": "^4.1.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
