--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   // This file is not used in compilation. It is here just for a nice editor experience.
   "extends": "@tsconfig/docusaurus/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",
-  },
-  "exclude": ["node_modules", "build", "**/__tests__/**/*", "**/*.js", "**/*.jsx"] // *** The files to not type check ***
+    "baseUrl": "."
+  }
 }
