--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "ts-jest": "^29.0.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
