--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start:auth": "npx netlify-cms-proxy-server",
+    "start": "docusaurus start --port 4000",
     "build": "docusaurus build",
     "test": "jest",
     "swizzle": "docusaurus swizzle",
@@ -21,6 +22,7 @@
     "@docusaurus/preset-classic": "2.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "netlify-cms-app": "^2.15.72",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
