--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+    "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,md,json} --config ./.prettierrc",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@deriv/ui": "^0.1.0",
@@ -30,6 +34,8 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@docusaurus/module-type-aliases": "2.2.0",
     "@linaria/babel-preset": "^4.3.2",
     "@linaria/core": "^4.2.4",
@@ -39,10 +45,19 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "babel-jest": "^29.3.1",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.1.6",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
     "react-test-renderer": "^17.0.2",
     "typescript": "^4.7.4"
   },
@@ -60,5 +75,9 @@
   },
   "engines": {
     "node": ">=16.14"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.prettierrc": "prettier --write"
   }
 }
