--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -26,7 +26,7 @@ jobs:
         uses: codecov/codecov-action@v3.1.1
         with:
           directory: ./coverage
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           files: ./coverage/lcov.info
           name: codecov-umbrella
           verbose: true
