chore: updated CODEOWNERS file

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -60,10 +60,9 @@
 *                                                               @matin-binary @michio-rework
 
 # ==============================================================
-#  deriv-api-docs/docs
+#  deriv-api-docs/src/configs
 # ==============================================================
 
-/docs/*                                                         @michio-rework
 /src/configs/*                                                  @michio-rework
 
 # ==============================================================
