--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-jsx-remove-data-test-id": "^3.0.0",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-sass": "^0.2.2",
     "netlify-cms-app": "^2.15.72",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "ts-jest": "^29.0.3"
   },
   "devDependencies": {
@@ -46,6 +48,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/node-sass": "^4.11.3",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "babel-jest": "^29.3.1",
