--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-jsx-remove-data-test-id": "^3.0.0",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.2",
+    "identity-obj-proxy": "^3.0.0",
     "netlify-cms-app": "^2.15.72",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
