--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.2",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
+    "swiper": "^8.4.5",
     "ts-jest": "^29.0.3"
   },
   "devDependencies": {
