--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.41.5",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "ts-jest": "^29.0.3"
