--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start:auth": "npx netlify-cms-proxy-server",
-    "start": "docusaurus start",
+    "start": "docker compose up -d && docusaurus start --no-open",
     "build": "docusaurus build",
     "test": "jest",
     "swizzle": "docusaurus swizzle",
@@ -26,6 +26,7 @@
     "@docusaurus/preset-classic": "2.2.0",
     "@docusaurus/theme-live-codeblock": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@testing-library/react-hooks": "^8.0.1",
     "babel-plugin-jsx-remove-data-test-id": "^3.0.0",
     "clsx": "^1.2.1",
@@ -39,7 +40,8 @@
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "swiper": "^8.3.2",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -65,6 +67,8 @@
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "jest-localstorage-mock": "^2.4.26",
+    "jest-location-mock": "^1.0.9",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "react-test-renderer": "^17.0.2",
