--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@deriv/deriv-api": "^1.0.11",
     "@deriv/ui": "^0.1.0",
     "@docusaurus/core": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
@@ -35,6 +36,9 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.42.1",
+    "react-query": "^3.39.2",
+    "react-table": "^7.8.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "swiper": "^8.3.2",
