--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start:auth": "npx netlify-cms-proxy-server",
-    "start": "docker-compose up -d && docusaurus start --no-open",
+    "start": "docusaurus start",
     "build": "docusaurus build",
     "test": "jest",
     "swizzle": "docusaurus swizzle",
