--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,11 @@
     "sourceType": "module"
   },
   "plugins": ["react", "@typescript-eslint"],
-  "rules": {},
+  "rules": {
+    "no-loss-of-precision": "off",
+    "@typescript-eslint/no-loss-of-precision": "off",
+    "@typescript-eslint/no-var-requires": 0
+  },
   "settings": {
     "react": {
       "version": "detect"
