--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "dependencies": {
     "@deriv/deriv-api": "^1.0.11",
     "@deriv/ui": "^0.1.0",
-    "@docusaurus/core": "2.3.1",
-    "@docusaurus/preset-classic": "2.3.1",
-    "@docusaurus/theme-live-codeblock": "^2.3.1",
+    "@docusaurus/core": "^2.4.0",
+    "@docusaurus/preset-classic": "^2.4.0",
+    "@docusaurus/theme-live-codeblock": "^2.4.0",
     "@hookform/resolvers": "^2.9.10",
     "@mdx-js/react": "^1.6.22",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
@@ -60,7 +60,7 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@deriv/api-types": "^1.0.80",
-    "@docusaurus/module-type-aliases": "2.3.1",
+    "@docusaurus/module-type-aliases": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
