--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   slack: circleci/slack@3.4.2
 commands:
   npm_install_from_cache:
-    description: 'npm install and save cache'
+    description: "npm install and save cache"
     steps:
       - restore_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}
@@ -16,29 +16,29 @@ commands:
           paths:
             - node_modules
   build:
-    description: 'Build Docusaurus project'
+    description: "Build Docusaurus project"
     steps:
       - run:
           name: Building Docusaurus project
           command: npm run build
 
   versioning:
-    description: 'Versioning the image'
+    description: "Versioning the image"
     parameters:
       version_name:
         type: string
-        default: 'staging'
+        default: "staging"
     steps:
       - run:
           name: Tag build
           command: echo "<< parameters.version_name >> $(date -u +'%Y-%m-%dT%H:%M:%SZ')" > build/version
 
   docker_build_push:
-    description: 'Build and push Docker image to Docker Hub'
+    description: "Build and push Docker image to Docker Hub"
     parameters:
       docker_latest_image_tag:
         type: string
-        default: 'latest-staging'
+        default: "latest-staging"
       docker_image_tag:
         type: string
         default: ${CIRCLE_SHA1}
@@ -55,17 +55,17 @@ commands:
             docker push ${DOCKHUB_ORGANISATION}/deriv-com-api:<< parameters.docker_image_tag >>
             docker push ${DOCKHUB_ORGANISATION}/deriv-com-api:<< parameters.docker_latest_image_tag >>
   k8s_deploy:
-    description: 'Deploy to k8s cluster'
+    description: "Deploy to k8s cluster"
     parameters:
       target:
         type: string
-        default: 'beta'
+        default: "beta"
       k8s_version:
         type: string
         default: ${CIRCLE_SHA1}
       k8s_namespace:
         type: string
-        default: 'deriv-com-api-staging'
+        default: "deriv-com-api-staging"
     steps:
       - k8s/install-kubectl
       - run:
@@ -77,18 +77,18 @@ commands:
             echo $CA_CRT | base64 --decode > ca.crt
             ./release.sh deriv-com-api << parameters.k8s_version >>
   notify_slack:
-    description: 'Notify slack'
+    description: "Notify slack"
     steps:
       - slack/status:
           include_project_field: false
-          failure_message: 'Release failed for api.deriv.com with version *$(cat build/version)*'
-          success_message: 'Release succeeded for api.deriv.com with version *$(cat build/version)*'
+          failure_message: "Release failed for api.deriv.com with version *$(cat build/version)*"
+          success_message: "Release succeeded for api.deriv.com with version *$(cat build/version)*"
           webhook: ${SLACK_WEBHOOK}
   publish_to_pages_staging:
-    description: 'Publish to cloudflare pages'
+    description: "Publish to cloudflare pages"
     steps:
       - run:
-          name: 'Publish to cloudflare pages (staging)'
+          name: "Publish to cloudflare pages (staging)"
           command: |
             npm i wrangler@2.0.19
             cd build
@@ -96,10 +96,10 @@ commands:
             echo "New staging website - http://staging.cf-pages-deriv-developers-portal.deriv.com"
 
   publish_to_pages_production:
-    description: 'Publish to cloudflare pages'
+    description: "Publish to cloudflare pages"
     steps:
       - run:
-          name: 'Publish to cloudflare pages (production)'
+          name: "Publish to cloudflare pages (production)"
           command: |
             npm i wrangler@2.0.19
             cd build
@@ -108,7 +108,7 @@ commands:
 jobs:
   build:
     docker:
-      - image: circleci/node:18.16.0
+      - image: cimg/node:18.16.0
     steps:
       - checkout
       - npm_install_from_cache
@@ -116,7 +116,7 @@ jobs:
 
   release_staging:
     docker:
-      - image: circleci/node:18.16.0
+      - image: cimg/node:18.16.0
     steps:
       - checkout
       - npm_install_from_cache
@@ -131,7 +131,7 @@ jobs:
 
   release_production:
     docker:
-      - image: circleci/node:18.16.0
+      - image: cimg/node:18.16.0
     steps:
       - checkout
       - npm_install_from_cache
@@ -142,7 +142,7 @@ jobs:
           docker_latest_image_tag: latest
           docker_image_tag: ${CIRCLE_SHA1}
       - k8s_deploy:
-          k8s_namespace: 'deriv-com-api-production'
+          k8s_namespace: "deriv-com-api-production"
           k8s_version: ${CIRCLE_SHA1}
       - publish_to_pages_production
       - notify_slack
