--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "typecheck": "tsc",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,md,json}' --config ./.prettierrc",
-    "prepare": "husky install"
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "@deriv/deriv-api": "^1.0.11",
