chore: setting up main test production

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,7 @@ commands:
           command: |
             npm i wrangler@2.0.19
             cd build
+            npx wrangler pages publish . --project-name=deriv-developers-portal-pages --branch=maintest
             echo "New website - http://cf-pages-deriv-developers-portal.deriv.com"
 
 jobs:
