--- a/.github/actions/publish_to_pages_production/action.yml
+++ b/.github/actions/publish_to_pages_production/action.yml
@@ -19,8 +19,8 @@ runs:
       CLOUDFLARE_API_TOKEN: ${{ inputs.CLOUDFLARE_API_TOKEN }}
     version: ${{ inputs.version }} 
     run: |-
-      npm i wrangler@2.0.19
+      npm i wrangler@3.10.1
       cd build
-      npx wrangler pages publish . --project-name=deriv-developers-portal-pages --branch=main
+      npx wrangler pages deploy . --project-name=deriv-developers-portal-pages --branch=main
       echo "New website - https://api.deriv.com"
     shell: bash
