--- a/.github/actions/publish_to_pages_staging/action.yml
+++ b/.github/actions/publish_to_pages_staging/action.yml
@@ -19,8 +19,8 @@ runs:
       CLOUDFLARE_API_TOKEN: ${{ inputs.CLOUDFLARE_API_TOKEN }}
       version: ${{ inputs.version }} 
     run: |-
-      npm i wrangler@2.0.19
+      npm i wrangler@3.10.1
       cd build
-      npx wrangler pages publish . --project-name=deriv-developers-portal-pages --branch=staging
+      npx wrangler pages deploy . --project-name=deriv-developers-portal-pages --branch=staging
       echo "New staging website - https://staging-api.deriv.com/"
     shell: bash
