--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -6,19 +6,19 @@ on:
 jobs:
   build_and_publish:
     name: Builds and Publishes to Cloudflare Pages Production
-    environment: Production # need to setup the environment variables like they were setup for deriv-app
+    environment: Production
     runs-on: Runner_16cores_Deriv-app # TODO: Replace this with the appropriate runner for Deriv-Api-Docs when provided
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Node
-        uses: './.github/actions/setup_node'
+        uses: ./.github/actions/setup_node
       - name: Install dependencies
-        uses: './.github/actions/npm_install_from_cache'
+        uses: ./.github/actions/npm_install_from_cache
       - name: Build
-        uses: './.github/actions/build'
+        uses: ./.github/actions/build
         with:
-          CA_CRT: ${{ secrets.CA_CRT }} # Verify the enviroment variables are defined in the repository
+          CA_CRT: ${{ secrets.CA_CRT }}
           CA: ${{ secrets.CA }}
           CONTEXT_ARTIFACT_S3_BUCKET: ${{ vars.CONTEXT_ARTIFACT_S3_BUCKET }}
           DATADOG_APPLICATION_ID: ${{ vars.DATADOG_APPLICATION_ID }}
@@ -26,34 +26,34 @@ jobs:
           DOCKERHUB_ORGANISATION: ${{ vars.DOCKERHUB_ORGANISATION }}
           DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKHUB_ORGANISATION: ${{ vars.DOCKHUB_ORGANISATION }} # Verify this is needed
+          DOCKHUB_ORGANISATION: ${{ vars.DOCKHUB_ORGANISATION }}
           KUBE_SERVER: ${{ secrets.KUBE_SERVER }}
           NODE_ENV: production
           SERVICEACCOUNT_TOKEN: ${{ secrets.SERVICEACCOUNT_TOKEN }}
       - name: Versioning
-        uses: './.github/actions/versioning'
+        uses: ./.github/actions/versioning
         with:
           version_name: production
       - name: Publish to Cloudflare Pages Production
-        uses: './.github/actions/publish_to_pages_production'
+        uses: ./.github/actions/publish_to_pages_production
         with:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           version: $(echo cat build/version | bash)
-
   send_slack_notification:
     name: Send Slack Notification
-    environment: Production # need to setup the environment variables like they were setup for deriv-app
+    environment: Production
     runs-on: Runner_16cores_Deriv-app # TODO: Replace this with the appropriate runner for Deriv-Api-Docs when provided
     if: always()
-    needs: [build_and_publish]
+    needs:
+      - build_and_publish
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Conclusion
         uses: technote-space/workflow-conclusion-action@v3
       - name: Send Slack Notification
-        uses: './.github/actions/notify_slack'
+        uses: ./.github/actions/notify_slack
         with:
           release_type: Production
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
