--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -26,12 +26,15 @@ jobs:
         uses: ./.github/actions/versioning
         with:
           version_name: production
+      - name: Read version file
+        id: readVersion
+        run: echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
       - name: Publish to Cloudflare Pages Production
         uses: ./.github/actions/publish_to_pages_production
         with:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          version: $(echo cat build/version | bash)
+          version: ${{ steps.readVersion.outputs.version }}
   send_slack_notification:
     name: Send Slack Notification
     environment: Production
