--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -47,10 +47,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Conclusion
         uses: technote-space/workflow-conclusion-action@v3
+      - name: Read version file
+        id: readVersion
+        run: echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
       - name: Send Slack Notification
         uses: ./.github/actions/notify_slack
         with:
           release_type: Production
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           status: ${{ env.WORKFLOW_CONCLUSION }}
-          version: $(echo cat build/version | bash)
+          version: ${{ steps.readVersion.outputs.version }}
