--- a/.github/workflows/release_staging.yml
+++ b/.github/workflows/release_staging.yml
@@ -18,7 +18,6 @@ jobs:
       - name: Build
         uses: ./.github/actions/build
         with:
-          CA: ${{ secrets.CA }}
           CONTEXT_ARTIFACT_S3_BUCKET: ${{ secrets.CONTEXT_ARTIFACT_S3_BUCKET }}
           DATADOG_APPLICATION_ID: ${{ vars.DATADOG_APPLICATION_ID }}
           DATADOG_CLIENT_TOKEN: ${{ vars.DATADOG_CLIENT_TOKEN }}
@@ -27,9 +26,12 @@ jobs:
         uses: ./.github/actions/versioning
         with:
           version_name: staging
+      - name: Read version file
+        id: readVersion
+        run: echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
       - name: Publish to Cloudflare Pages Staging
         uses: ./.github/actions/publish_to_pages_staging
         with:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          version: $(echo cat build/version | bash)
+          version: ${{ steps.readVersion.outputs.version }}
