--- a/.github/actions/versioning/action.yml
+++ b/.github/actions/versioning/action.yml
@@ -1,13 +1,13 @@
 name: versioning
 description: Generates a version for the build
 inputs:
-  version_name:
-    description: Version name
+  RELEASE_TYPE:
+    description: Release Type
     required: false
     default: staging
 runs:
   using: composite
   steps:
     - name: Tag build
-      run: echo "${{ inputs.version_name }} $(date -u +'%Y-%m-%dT%H:%M:%SZ')" > build/version
+      run: echo "${{ inputs.RELEASE_TYPE }} $(date -u +'%Y-%m-%dT%H:%M:%SZ')" > build/version
       shell: bash
