--- a/.github/workflows/release_staging.yml
+++ b/.github/workflows/release_staging.yml
@@ -15,6 +15,8 @@ jobs:
         uses: ./.github/actions/setup_node
       - name: Install Dependencies
         uses: ./.github/actions/npm_install_from_cache
+      - name: Invalidate Cache
+        uses: ./.github/actions/invalidate_master_cache
       - name: Build
         uses: ./.github/actions/build
         with:
