chore: use ubuntu-latest as the runner

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: Runner_16cores_Deriv-app # TODO: Replace this with the appropriate runner for Deriv-Api-Docs when provided
+    runs-on: ubuntu-latest # TODO: Replace this with the appropriate runner for Deriv-Api-Docs when provided
     steps:
       - name: Checkout
         uses: actions/checkout@v4
