chore: add command to collect coverage

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -21,6 +21,6 @@ jobs:
         uses: ./.github/actions/build
       - name: Run Tests
         run: |
-          npm run test
+          npm run test  -- --collectCoverage
       - name: Coveralls
         uses: coverallsapp/github-action@v2
