ci: fix node_modules cache

--- a/.github/actions/invalidate_master_cache/action.yml
+++ b/.github/actions/invalidate_master_cache/action.yml
@@ -6,6 +6,5 @@ runs:
     - name: save_cache
       uses: actions/cache/save@v3
       with:
-        path: |-
-          node_modules
-        key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+        path: ./node_modules
+        key: ${{ runner.os }}-node_modules-${{ hashFiles('./package-lock.json') }}
