--- a/.github/actions/npm_install_from_cache/action.yml
+++ b/.github/actions/npm_install_from_cache/action.yml
@@ -8,7 +8,7 @@ runs:
       uses: actions/cache/restore@v3
       with:
         path: node_modules
-        key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ runner.os }}-node_modules-${{ hashFiles('./package-lock.json') }}
     - name: Install npm dependencies
       if: steps.cache-nodemodules.outputs.cache-hit != 'true'
       run: npm install
