--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -8,6 +8,8 @@ jobs:
     name: Builds and Publishes to Cloudflare Pages Production
     environment: Production
     runs-on: ubuntu-latest # TODO: Replace this with the appropriate runner for Deriv-Api-Docs when provided
+    outputs:
+      RELEASE_VERSION: ${{ steps.extract_version.outputs.RELEASE_VERSION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,6 +21,13 @@ jobs:
         uses: ./.github/actions/build
         with:
           NODE_ENV: production
+      - name: Versioning
+        uses: ./.github/actions/versioning
+        with:
+          RELEASE_TYPE: production
+      - name: Extract version
+        id: extract_version
+        run: echo "RELEASE_VERSION=$(cat build/version)" >> $GITHUB_OUTPUT
       - name: Publish to Cloudflare Pages Production
         uses: ./.github/actions/publish_to_pages_production
         with:
@@ -36,17 +45,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Conclusion
         uses: technote-space/workflow-conclusion-action@v3
-      - name: Versioning
-        uses: ./.github/actions/versioning
-        with:
-          RELEASE_TYPE: production
-      - name: Read from version file
-        id: readVersion
-        run: echo "version=$(cat build/version)" >> $GITHUB_OUTPUT
       - name: Send Slack Notification
         uses: ./.github/actions/notify_slack
         with:
           RELEASE_TYPE: Production
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           STATUS: ${{ env.WORKFLOW_CONCLUSION }}
-          VERSION: ${{ steps.readVersion.outputs.version }}
+          version: ${{ needs.build_and_publish.outputs.RELEASE_VERSION}}
