chore: add docker and k8s setup

--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -28,6 +28,20 @@ jobs:
       - name: Extract version
         id: extract_version
         run: echo "RELEASE_VERSION=$(cat build/version)" >> $GITHUB_OUTPUT
+      - name: Publish to Docker
+        uses: ./.github/actions/publish_to_docker
+        with:
+          DOCKER_LATEST_IMAGE_TAG: 'latest'
+          DOCKER_IMAGE_TAG: ${{ secrets.SHA1 }}
+          DOCKHUB_ORGANISATION: ${{ secrets.DOCKHUB_ORGANISATION }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Deploy to Kubernetes
+        uses: ./.github/actions/deploy_to_kubernetes
+        with:
+          K8S_VERSION: ${{ secrets.SHA1 }}
+          K8S_NAMESPACE: 'deriv-com-api-production'
+          CA_CRT: ${{ secrets.CA_CRT }}
       - name: Publish to Cloudflare Pages Production
         uses: ./.github/actions/publish_to_pages_production
         with:
