--- a/.github/actions/publish_to_docker/action.yml
+++ b/.github/actions/publish_to_docker/action.yml
@@ -8,7 +8,7 @@ inputs:
     type: string
   DOCKER_IMAGE_TAG:
     description: Docker image tag
-    required: false
+    required: true
     type: string
   DOCKHUB_ORGANISATION:
     description: Docker Hub organisation
