chore: make input required

--- a/.github/actions/deploy_to_kubernetes/action.yml
+++ b/.github/actions/deploy_to_kubernetes/action.yml
@@ -17,7 +17,7 @@ inputs:
     default: 'deriv-com-api-staging'
   CA_CRT:
     description: Kubernetes CA certificate
-    required: false
+    required: true
     type: string
 steps:
   - k8s/install-kubectl
