--- a/.github/actions/publish_to_docker/action.yml
+++ b/.github/actions/publish_to_docker/action.yml
@@ -27,10 +27,10 @@ inputs:
       - run:
           name: Building docker image
           command: |
-            docker build -t ${{ inputs.DOCKHUB_ORGANISATION }}/deriv-com-api:<< ${{ inputs.DOCKER_IMAGE_TAG }} >> -t ${{ inputs.DOCKHUB_ORGANISATION }}/deriv-com-api:<< ${{ inputs.DOCKER_LATEST_IMAGE_TAG }} >> .
+            docker build -t ${{ inputs.DOCKHUB_ORGANISATION }}/deriv-com-api:${{ inputs.DOCKER_IMAGE_TAG }} -t ${{ inputs.DOCKHUB_ORGANISATION }}/deriv-com-api:${{ inputs.DOCKER_LATEST_IMAGE_TAG }}.
       - run:
           name: Pushing Image to docker hub
           command: |
             echo ${{ inputs.DOCKERHUB_PASSWORD }} | docker login -u $${{ inputs.DOCKERHUB_USERNAME }} --password-stdin
-            docker push ${{ inputs.DOCKHUB_ORGANISATION }}/deriv-com-api:<< ${{ inputs.DOCKER_IMAGE_TAG }} >>
-            docker push ${{ inputs.DOCKHUB_ORGANISATION }}/deriv-com-api:<< ${{ inputs.DOCKER_LATEST_IMAGE_TAG }} >>
+            docker push ${{ inputs.DOCKHUB_ORGANISATION }}/deriv-com-api:${{ inputs.DOCKER_IMAGE_TAG }}
+            docker push ${{ inputs.DOCKHUB_ORGANISATION }}/deriv-com-api:${{ inputs.DOCKER_LATEST_IMAGE_TAG }}
