--- a/.github/actions/deploy_to_kubernetes/action.yml
+++ b/.github/actions/deploy_to_kubernetes/action.yml
@@ -17,10 +17,11 @@ inputs:
 steps:
   - k8s/install-kubectl
   - run:
-      name: Deploying to k8s cluster for service ${{ inputs.K8S_NAMESPACE }}
+      name: Deploying to k8s cluster for service ${{ inputs.K8S_NAMESPACE }} 🚀
       command: |
         export NAMESPACE=${{ inputs.K8S_NAMESPACE }}
         git clone https://github.com/binary-com/devops-ci-scripts
         cd devops-ci-scripts/k8s-build_tools
         echo ${{ inputs.CA_CRT }} | base64 --decode > ca.crt
+        export CA="ca.crt"
         ./release.sh deriv-com-api ${{ inputs.K8S_VERSION }}
