ci/ use ref_name instead of SHA1

--- a/.github/workflows/release_staging.yml
+++ b/.github/workflows/release_staging.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Deploy to Kubernetes
         uses: ./.github/actions/deploy_to_kubernetes
         with:
-          K8S_VERSION: ${{ secrets.SHA1 }}
+          K8S_VERSION: ${{ github.ref_name }}
           K8S_NAMESPACE: 'deriv-com-api-staging'
           CA_CRT: ${{ secrets.CA_CRT }}
