--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -37,7 +37,7 @@ jobs:
         uses: ./.github/actions/publish_to_docker
         with:
           DOCKER_LATEST_IMAGE_TAG: 'latest'
-          DOCKER_IMAGE_TAG: ${{ secrets.SHA1 }}
+          DOCKER_IMAGE_TAG: ${{ github.ref_name }}
           DOCKERHUB_ORGANISATION: ${{ secrets.DOCKERHUB_ORGANISATION }}
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
