--- a/.github/actions/deploy_to_kubernetes/action.yml
+++ b/.github/actions/deploy_to_kubernetes/action.yml
@@ -11,10 +11,16 @@ inputs:
   CA_CRT:
     description: Kubernetes CA certificate
     required: true
+  KUBE_SERVER:
+    description: Kubernetes server
+    required: true
+  SERVICEACCOUNT_TOKEN:
+    description: Kubernetes service account token
+    required: true
 runs:
   using: composite
   steps:
-      - name: Setup Environment variables
+    - name: Setup Environment variables
       run: |
         echo "NAMESPACE=${{ inputs.K8S_NAMESPACE }}" >> "$GITHUB_ENV"
         echo "KUBE_SERVER=${{ inputs.KUBE_SERVER }}" >> "$GITHUB_ENV"
@@ -24,9 +30,9 @@ runs:
       shell: bash
     - name: Deploying to k8s cluster for service ${{ inputs.K8S_NAMESPACE }} 🚀
       run: |
-          git clone https://github.com/binary-com/devops-ci-scripts
-          cd devops-ci-scripts/k8s-build_tools
-          echo ${{ inputs.CA_CRT }} | base64 --decode > ca.crt
-          export CA="ca.crt"
-          ./release.sh ${APP_NAME} ${{ inputs.K8S_VERSION }}
+        git clone https://github.com/binary-com/devops-ci-scripts
+        cd devops-ci-scripts/k8s-build_tools
+        echo ${{ inputs.CA_CRT }} | base64 --decode > ca.crt
+        export CA="ca.crt"
+        ./release.sh ${APP_NAME} ${{ inputs.K8S_VERSION }}
       shell: bash
